2005-03-04:
	* configure.ac: remove -Wno-unused-parameters from the set of extra
	warning flags.  Add a newline after inclusion of <krb5.h> when we're
	testing for structures defined in the krb5 API.
	* src/sly.c: compile in a dummy sly_v4() if USE_KRB4 isn't defined
	* src/v4.h: don't provide prototypes if USE_KRB4 isn't defined.

2005-02-28:
	* configure.in: demote -Wextra and friends --enable-extra-warnings
	status.

2005-02-28:
	* src/minikafs.c: fix compilation against releases which didn't define
	KRB_TICKET_GRANTING_TICKET.
	* src/pagsh.c: add missing <stdio.h> inclusion.
	* src/minikafs.c: handle cases where krb_life_to_time() isn't available.
	* src/pagsh.c: add a --help flag, by assuming that the command will
	never start with "-".

2005-02-24 nalin
	* src/logstdio.c: add a log_progname global to adjust log messages.
	* src/afs5log.c,src/harness.c: set log_progname at startup.
	* src/prompter.c: suppress prompts for the previously-entered password.
	* src/userinfo.c: clean up some valgrind-caught weirdness.
	* src/harness.c: use getpass() instead of fgets() for
	PAM_PROMPT_ECHO_OFF prompts.  Kids, don't try that at home.
	* src/sly.c: only refresh the default krb5 ccache if its principal is
	the one we've authenticated.
	* src/tokens.c: log a debug message if we create a new PAG.  When
	determining the user's home cell, if the user's home directory is a
	symlink, chase it.
2005-02-24 nalin
	* configure.ac: add a --enable-default-keytab-location flag.
	* src/options.c,src/pam_krb5.5.in,src/pam_krb5.8.in: obey it.
	* README: document that it can be overridden.  (Don't want to change
	this to README.in to actually reflect that override value.)
	* src/v4.c(v4_get_creds): error out if password is NULL or zero-length.
	* src/v5.c(v5_get_creds): provide the prompter callback to libkrb5.
	* src/options.c: add an "initial_prompt"/"no_initial_prompt" option
	which suppresses the initial password prompt.  It's useless for